actualizaciones proyecto grupal